--- a/manifests/deploy-microservice.yml
+++ b/manifests/deploy-microservice.yml
@@ -2,26 +2,26 @@ kind: Deployment
 apiVersion: apps/v1
 metadata:
     labels:
-        app: mild-temper-microservice
+        app: colourful_rainbow_microservice
         stack: frontend
         source: demo
-    name: mild-temper-microservice
+    name: colourful_rainbow_microservice
     namespace: microservices
 spec:
     replicas: 3
     selector:
         matchLabels:
-            run: mild-temper-microservice
+            run: colourful_rainbow_microservice
     template:
         metadata:
             labels:
-                app: mild-temper-microservice
-                run: mild-temper-microservice
+                app: colourful_rainbow_microservice
+                run: colourful_rainbow_microservice
                 source: demo
         spec:
             containers:
                 -   image: 219099013464.dkr.ecr.us-west-2.amazonaws.com/mild-temper-microservice
-                    name: mild-temper-microservice
+                    name: colourful_rainbow_microservice
                     ports:
                         -   name: web
                             containerPort: 8080
@@ -31,13 +31,13 @@ kind: Service
 apiVersion: v1
 metadata:
     labels:
-        app: mild-temper-microservice-service
-    name: mild-temper-microservice-service
+        app: colourful_rainbow_microservice
+    name: colourful_rainbow_microservice
     namespace: microservices
 spec:
     selector:
         source: demo
-        app: mild-temper-microservice
+        app: colourful_rainbow_microservice
     ports:
         -   name: web
             protocol: TCP
@@ -51,15 +51,15 @@ kind: Ingress
 metadata:
     annotations:
         nginx.ingress.kubernetes.io/rewrite-target: /$2
-    name: mild-temper-ingress
+    name: colourful_rainbow_microservice-ingress
     namespace: microservices
 spec:
     rules:
         -   http:
                 paths:
-                    -   path: /mild-temper(/|$)(.*)
+                    -   path: /colourful_rainbow_microservice(/|$)(.*)
                         backend:
-                            serviceName: mild-temper-microservice-service
+                            serviceName: colourful_rainbow_microservice
                             servicePort: 30201
 
 
